--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -52,9 +52,9 @@
 	\end{figure}
 		\begin{description}
 		 \item[Géomorphologie :] Étude de la genèse des reliefs.
-		 \item[Plaque litosphérique :] Partie supérieure des plaques tectoniques - terrestres ou maritimes -
-		 \item[Asténosphere :] Partie inférieure des plaques tectoniques, siège des séismes de profondeurs
-		 \item[Obduction :] Une plaque en chevauche une autre
+		 \item[Plaque litosphérique :] Partie supérieure des plaques tectoniques - terrestres ou maritimes -
+		 \item[Asténosphere :] Partie inférieure des plaques tectoniques, siège des séismes de profondeurs
+		 \item[Obduction :] Une plaque en chevauche une autre
 		\end{description}
  \end{center}
 \end{frame}
@@ -66,7 +66,7 @@
     \begin{center}
       \includegraphics[width=6cm]{Images/subduction.png}
       \includegraphics[width=6cm]{Images/obduction.png}
-      \caption{A gauche une subduction et à droite une obduction.}
+      \caption{À gauche une subduction et à droite une obduction.}
     \end{center}
   \end{figure}
 \end{frame}
@@ -75,11 +75,11 @@
 \begin{frame}
   \begin{center}
     \begin{figure}
-      \includegraphics[width=5.5cm]{Images/Images_Alexis/plaques.png}
+      \includegraphics[width=5cm]{Images/Images_Alexis/plaques.png}
       \caption{Carte des principales plaques tectoniques}
-      \includegraphics[width=5cm]{Images/Images_Alexis/andes.jpg}
-      \includegraphics[width=5cm]{Images/Images_Alexis/japon.jpg}
-      \caption{A droite les Andes, à gauche le Japon}
+      \includegraphics[width=4.5cm]{Images/Images_Alexis/andes.jpg}
+      \includegraphics[width=4.5cm]{Images/Images_Alexis/japon.jpg}
+      \caption{À droite les Andes, à gauche le Japon}
     \end{figure}
   \end{center}
 \end{frame}
@@ -152,7 +152,7 @@
 		 \item \textit{-140 Ma, crétacé inférieur} : début de la compression de l’océan alpin ;
 		 \item \textit{-65 Ma, paléocène} : émersion de la plate-forme continentale, le mont blanc passe sous la zone d'obduction pour ressurgir ensuite ;
 		 \item \textit{-23 Ma, néogène}: création du jura
-		 \item \textit{Pliocène} : séparation de la couche calcaire du reste des plis
+		 \item \textit{Pliocène} : séparation de la couche calcaire du reste des plis
 		\end{itemize}
 	\end{center}
 \end{frame}
@@ -162,12 +162,12 @@
 	\begin{center}
 		\begin{figure}
 		\begin{figure}
-			\includegraphics[width=6cm]{Images/Images_Alexis/glacier_reculon.png}
+			\includegraphics[width=5cm]{Images/Images_Alexis/glacier_reculon.png}
 			\includegraphics[width=3cm]{Images/Images_Alexis/glaciers_img3.png}
 		\end{figure}
 		\caption{Les ères glaciaires successives ont grandement participé au façonnage de nos paysages.}
 		\begin{figure}
-			\includegraphics[width=6cm]{Images/Images_Alexis/gresivaudan.jpg}
+			\includegraphics[width=5cm]{Images/Images_Alexis/gresivaudan.jpg}
 		\end{figure}
 		\end{figure}
 	\end{center}
@@ -201,8 +201,7 @@
 \end{frame}
 
 
-\subsection{Voxels}
-\subsubsection{Explications}
+\subsection{Les voxels : explications et exemples}
 \begin{frame}
  \begin{center}
   \begin{figure}
@@ -216,12 +215,11 @@
  \end{center}
 \end{frame}
 
-\subsubsection{Examples}
 \begin{frame}
  \begin{center}
   \begin{tabular}{ll}
    \includegraphics[width=5.5cm]{Images/Images_Alexis/voxel_engine3.jpg} &%
-   \includegraphics[width=5.5cm]{Images/Images_Alexis/voxel_engine1.jpg} \\
+   \includegraphics[width=5.5cm]{Images/Images_Alexis/voxel_engine1.jpg} \\
    \includegraphics[width=5.5cm]{Images/Images_Alexis/voxel_engine4.jpg} &%
    \includegraphics[width=5.5cm]{Images/Images_Alexis/voxel_engine2.jpg} \\
   \end{tabular}
@@ -561,19 +559,14 @@
 
 \section{Conclusion}
 
-\subsection{Remerciements}
+\subsection{Remerciements et sources}
 \begin{frame}
-	\begin{center}
-	 \Huge Merci Pour votre attention
-	 
-	 \begin{figure}
-		\Large Place aux questions
-	  \includegraphics[width=5cm]{Images/interrogation.jpg}
-	 \end{figure}
-
-	 
-	\end{center}
+  Sources :\\
+  Richard Bézin, Benoît Crespin, Xavier Skapin, Olivier Terraz, Philippe Meseure. Opérations
+topologiques pour la géomorphologie. Journées de l’Association Française d’Informatique
+Graphique, Oct 2011, Biarritz, France. pp.95-104, 2011. <hal-00633705>
+JE COMPLETE
+  
 \end{frame}
-
 
 \end{document}
