Ajout d'un tableau pour l'image dans la diapo de présentation des cellules.

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -260,14 +260,12 @@
 
 \subsection{Les cellules}
 \begin{frame}{Définition d'une cellule}
-  Cellule : plus petit élément incompressible.\\
-  Taille réelle : sphère de 10 m de Ø\\
-  Taille dans la simulation : cercle de Ø 1
-  \begin{figure}
-    \begin{center}
-      \includegraphics[width=1.5cm]{Images/cellule.png}
-    \end{center}
-  \end{figure}
+  \begin{tabular}{m{8cm}m{1cm}m{2cm}}
+    \mbox{Cellule : plus petit élément incompressible. Taille}
+    \mbox{réelle : sphère de 10 m de Ø Taille dans la}
+    \mbox{simulation : cercle de Ø 1} &&
+    \includegraphics[width=1.5cm]{Images/cellule.png}
+  \end{tabular}
   Propriétés mutables :
   \begin{itemize}
    \item vélocité~;
