La french touch finale

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -26,7 +26,7 @@
 \setlength{\tabcolsep}{0pt}
 
 \title{Comment simuler numériquement la géomorphologie alpine ?}
-\subtitle{Sujet de TPE}
+\subtitle{Compte rendu de nos recherches et explication de notre démonstrateur}
 \author{Gros Alexis, Manceau Thibaut, Porteries Tristan}
 %\logo{\includegraphics[height=0.5cm]{blender.png}}
 
@@ -37,7 +37,9 @@
 % Sommaire
 \begin{frame}{Sommaire}
   \begin{multicols}{2}
-    \small \tableofcontents
+    \normalsize
+    \setcounter{tocdepth}{1}
+    \tableofcontents
   \end{multicols}
 \end{frame}
 
@@ -58,7 +60,7 @@
 		\end{description}
  \end{center}
 \end{frame}
- 
+
 
 \subsection{La subduction et l'obduction}
 \begin{frame}
@@ -79,7 +81,7 @@
       \caption{Carte des principales plaques tectoniques}
       \includegraphics[width=5cm]{Images/Images_Alexis/andes.jpg}
       \includegraphics[width=5cm]{Images/Images_Alexis/japon.jpg}
-      \caption{A droite les Andes, à gauche le Japon}
+      \caption{A droite le Japon, à gauche les Andes}
     \end{figure}
   \end{center}
 \end{frame}
