--- a/Beamer/entete_beamer_pdflatex.tex
+++ b/Beamer/entete_beamer_pdflatex.tex
@@ -72,6 +72,7 @@
     \frametitle{Sommaire}
     \begin{multicols}{2}
       {\small
+				\setcounter{tocdepth}{3}
         \tableofcontents[currentsection, hideothersubsections]}
     \end{multicols}
   \end{frame}
