--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -408,8 +408,8 @@
   \end{figure}
 \end{frame}
 
-\subsection{La compression et traction}
-\begin{frame}{Loi de Hook et module de Young}
+\subsection{Compression et traction}
+\begin{frame}{Loi de Hooke et module de Young}
   \begin{center}
     $\sigma = E \times \varepsilon$
   \end{center}
@@ -560,12 +560,38 @@
 
 \subsection{Remerciements et sources}
 \begin{frame}
-  Sources :\\
-  Richard Bézin, Benoît Crespin, Xavier Skapin, Olivier Terraz, Philippe Meseure. Opérations
-topologiques pour la géomorphologie. Journées de l’Association Française d’Informatique
-Graphique, Oct 2011, Biarritz, France. pp.95-104, 2011. <hal-00633705>
-JE COMPLETE
-  
+  Sources :
+  \begin{footnotesize}
+  \begin{itemize}
+   \item Richard Bézin, Benoît Crespin, Xavier Skapin, Olivier Terraz, Philippe Meseure. Opérations
+topologiques pour la géomorphologie.
+    \begin{tiny} 
+     Journées de l’Association Française d’Informatique Graphique, Oct 2011, Biarritz, France. pp.95-104, 2011. <hal-00633705>
+    \end{tiny}
+   \item Pascale Roudier. Synthèse de paysages réalistes par simulation de processus d’érosion. 
+    \begin{tiny}
+    Graphics
+[cs.GR]. École Nationale Supérieure des Mines de Saint-Etienne; Université Jean Monnet -
+Saint-Etienne, 1993. French. <NNT : 1993STET4011>. <tel-00835373>
+	\end{tiny}
+   \item Thomas Leduc. Modélisation par un système dynamique discret du processus de subduction-érosion en tectonique des plaques : première approche uni-dimensionnelle. 
+    \begin{tiny}
+    Laboratoires LIP6, Mai 1997.
+    \end{tiny}
+   \item Thomas Leduc. Modélisations par réseaux d’automates cellulaires et simulations parallèles
+du phénomène de subduction- érosion en tectonique des plaques. 
+     \begin{tiny}
+     Modeling and Simulation.
+Université Pierre et Marie Curie - Paris VI, 1999. French. <tel-00327733>
+	 \end{tiny}
+   \item Thomas Leduc. Simulation par automates cellulaires bi-dimensionnels en géotectonique. 
+     \begin{tiny}
+     Laboratoires LIP6, 1999.
+     \end{tiny}
+   \item Wikipédia (lois et algorithmes) et Google Images (Illustrations)
+  \end{itemize}
+% Il est obligé de citer ainsi les thèses d'un point de vue légal. Ceci dit, la taille des informations inutiles sera réduite au minimum pour plus de clarté.
+  \end{footnotesize}
 \end{frame}
 
 \end{document}
