Titres de bonne taille pour le sommaire

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -11,7 +11,7 @@
 \usepackage{parcolumns}
 
 \useoutertheme{infolines}
-%\setbeamersize{text margin left=1cm,text margin right=1cm}
+\setbeamersize{text margin left=1cm,text margin right=1cm}
 \usetikzlibrary{arrows}
 \definecolor{qqwuqq}{rgb}{0,0.39,0}
 \definecolor{xdxdff}{rgb}{0.49,0.49,1}
@@ -27,7 +27,7 @@
 \setlength{\tabcolsep}{0pt}
 
 \title{Comment simuler numériquement la géomorphologie alpine ?}
-\subtitle{Compte rendu de nos recherches et explication de notre démonstrateur}
+\subtitle{Sujet de TPE}
 \author{Gros Alexis, Manceau Thibaut, Porteries Tristan}
 %\logo{\includegraphics[height=0.5cm]{blender.png}}
 
@@ -38,9 +38,7 @@
 % Sommaire
 \begin{frame}{Sommaire}
   \begin{multicols}{2}
-    \normalsize
-    \setcounter{tocdepth}{1}
-    \tableofcontents
+    \small \tableofcontents
   \end{multicols}
 \end{frame}
 
@@ -61,7 +59,7 @@
 		\end{description}
  \end{center}
 \end{frame}
-
+ 
 
 \subsection{La subduction et l'obduction}
 \begin{frame}
@@ -82,7 +80,7 @@
       \caption{Carte des principales plaques tectoniques}
       \includegraphics[width=4.5cm]{Images/Images_Alexis/andes.jpg}
       \includegraphics[width=4.5cm]{Images/Images_Alexis/japon.jpg}
-      \caption{À gauche les Andes, à droite le Japon}
+      \caption{À droite les Andes, à gauche le Japon}
     \end{figure}
   \end{center}
 \end{frame}
@@ -109,7 +107,7 @@
 
 \section{L'érosion}
 
-\subsection{Le ruissellement et l'érosion fluviale}
+\subsection{Ruissellement et érosion fluviale}
 \begin{frame}
  \begin{center}
   \begin{figure}
@@ -160,7 +158,7 @@
 	\end{center}
 \end{frame}
 
-\subsection{L'effet des glaciers sur le paysage Alpin}
+\subsection{L'effet des glaciers}
 \begin{frame}
 	\begin{center}
 		\begin{figure}
@@ -562,7 +560,6 @@
 
 \subsection{Remerciements et sources}
 \begin{frame}
-<<<<<<< HEAD
   Sources :
   \begin{footnotesize}
   \begin{itemize}
@@ -595,13 +592,6 @@ Université Pierre et Marie Curie - Paris VI, 1999. French. <tel-00327733>
   \end{itemize}
 % Il est obligé de citer ainsi les thèses d'un point de vue légal. Ceci dit, la taille des informations inutiles sera réduite au minimum pour plus de clarté.
   \end{footnotesize}
-=======
-  Sources :\\
-  Serge Fudral, Richard Bézin, Benoît Crespin, Xavier Skapin, Olivier Terraz, Philippe Meseure. Opérations
-topologiques pour la géomorphologie. Journées de l’Association Française d’Informatique
-Graphique, Oct 2011, Biarritz, France. pp.95-104, 2011. <hal-00633705>
-  
->>>>>>> 33702f82ce778100c61a4cf5add83b967245ece0
 \end{frame}
 
 \end{document}
