--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -35,52 +35,32 @@
 \CenterWallPaper{1}{Images/inde.jpg}
 % Titre
 \frame{\titlepage}
-% Sommaire
-\begin{frame}{Sommaire}
-  \begin{multicols}{2}
-    \small \tableofcontents
-  \end{multicols}
-\end{frame}
 
-\section{Concepts clefs}
+\section{Les principes géomorphologiques}
 
 \subsection{Glossaire}
-\begin{frame}
- \begin{center}
-	\begin{figure}
-	 \includegraphics[width=8cm]{Images/Images_Alexis/image007.jpg}
-	 \caption{Exemple d'obduction}
-	\end{figure}
-		\begin{description}
-		 \item[Géomorphologie :] Étude de la genèse des reliefs.
-		 \item[Plaque litosphérique :] Partie supérieure des plaques tectoniques - terrestres ou maritimes -
-		 \item[Asténosphere :] Partie inférieure des plaques tectoniques, siège des séismes de profondeurs
-		 \item[Obduction :] Une plaque en chevauche une autre
-		\end{description}
- \end{center}
-\end{frame}
- 
-
-\subsection{La subduction et l'obduction}
-\begin{frame}
-  \begin{figure}
-    \begin{center}
-      \includegraphics[width=6cm]{Images/subduction.png}
-      \includegraphics[width=6cm]{Images/obduction.png}
-      \caption{À gauche une subduction et à droite une obduction.}
-    \end{center}
-  \end{figure}
-\end{frame}
-
-\subsection{Introduction à la tectonique des plaques}
-\begin{frame}
+\begin{frame}{Glossaire géomorphologique}
+  \begin{description}
+    \item[Géomorphologie :] Étude de la genèse des reliefs.
+    \item[Plaque litosphérique :] Partie supérieure des plaques tectoniques terrestres ou maritimes.
+    \item[Asténosphere :] Partie inférieure des plaques tectoniques, siège des séismes de profondeurs.
+    \item[Obduction :] Une plaque en chevauche une autre.
+  \end{description}
   \begin{center}
     \begin{figure}
-      \includegraphics[width=5cm]{Images/Images_Alexis/plaques.png}
-      \caption{Carte des principales plaques tectoniques}
-      \includegraphics[width=4.5cm]{Images/Images_Alexis/andes.jpg}
-      \includegraphics[width=4.5cm]{Images/Images_Alexis/japon.jpg}
-      \caption{À droite les Andes, à gauche le Japon}
+      \includegraphics[width=6cm]{Images/Images_Alexis/image007.jpg}
+      \caption{Exemple d'obduction}
+    \end{figure}
+  \end{center}
+\end{frame}
+
+\subsection{Les plaques tectoniques}
+\begin{frame}{Introduction à la tectonique des plaques}
+  \begin{center}
+    \begin{figure}
+      \subfigure[Carte des principales plaques tectoniques]{\includegraphics[width=4cm]{Images/Images_Alexis/plaques.png}}
+      \subfigure[Les Andes]{\includegraphics[width=4cm]{Images/Images_Alexis/andes.jpg}}
+      \subfigure[Le Japon]{\includegraphics[height=3cm]{Images/Images_Alexis/japon.jpg}}
     \end{figure}
   \end{center}
 \end{frame}
@@ -140,123 +120,103 @@
 
 \section{Problématiques géologiques des Alpes}
 
-\subsection{Un bref historique des Alpes}
-\begin{frame}
-	\begin{center}
-		\begin{figure}
-			\includegraphics[width=4cm]{Images/Images_Alexis/mont_blanc.jpg}
-		\end{figure}
-
-		Historique des évènements marquant des Alpes
-		\begin{itemize}
-		 \item \textit{-200 Ma, trias} : ouverture de l’océan alpin ;
-		 \item \textit{-140 Ma, crétacé inférieur} : début de la compression de l’océan alpin ;
-		 \item \textit{-65 Ma, paléocène} : émersion de la plate-forme continentale, le mont blanc passe sous la zone d'obduction pour ressurgir ensuite ;
-		 \item \textit{-23 Ma, néogène}: création du jura
-		 \item \textit{Pliocène} : séparation de la couche calcaire du reste des plis
-		\end{itemize}
-	\end{center}
+\subsection{L'historique des Alpes}
+\begin{frame}{Chronologie des Alpes}
+  \begin{itemize}
+    \item \textit{-200 Ma, trias} : ouverture de l’océan alpin ;
+    \item \textit{-140 Ma, crétacé inférieur} : début de la compression de l’océan alpin ;
+    \item \textit{-65 Ma, paléocène} : émersion de la plate-forme continentale, le mont blanc passe sous la zone d'obduction pour ressurgir ensuite ;
+    \item \textit{-23 Ma, néogène}: création du jura ;
+    \item \textit{Pliocène} : séparation de la couche calcaire du reste des plis.
+  \end{itemize}
+  \begin{center}
+    \begin{figure}
+      \includegraphics[width=4cm]{Images/Images_Alexis/mont_blanc.jpg}
+    \end{figure}
+  \end{center}
 \end{frame}
 
-\subsection{L'effet des glaciers}
-\begin{frame}
-	\begin{center}
-		\begin{figure}
-		\begin{figure}
-			\includegraphics[width=5cm]{Images/Images_Alexis/glacier_reculon.png}
-			\includegraphics[width=3cm]{Images/Images_Alexis/glaciers_img3.png}
-		\end{figure}
-		\caption{Les ères glaciaires successives ont grandement participé au façonnage de nos paysages.}
-		\begin{figure}
-			\includegraphics[width=5cm]{Images/Images_Alexis/gresivaudan.jpg}
-		\end{figure}
-		\end{figure}
-	\end{center}
+\subsection{Les glaciers}
+\begin{frame}{L'effet des glaciers sur le paysage Alpin}
+  \begin{center}
+    \begin{figure}
+      \includegraphics[height=2cm]{Images/Images_Alexis/glacier_reculon.png}
+      \includegraphics[height=2cm]{Images/Images_Alexis/glaciers_img3.png}
+      \caption{Les ères glaciaires successives ont grandement participé au façonnage de nos paysages.}
+      \includegraphics[width=4cm]{Images/Images_Alexis/gresivaudan.jpg}
+    \end{figure}
+  \end{center}
 \end{frame}
 
 
-\section{Simulations Alternatives}
-
+\section{Les simulations alternatives}
 \subsection{Le bruit de perlin}
-\begin{frame}
-	\begin{center}
-	 \begin{figure}
-	  \includegraphics[width=4cm]{Images/Images_Alexis/perlin_noise.png}
-	  \caption{Une représentation du bruit de perlin}
-	  \includegraphics[width=4cm]{Images/Images_Alexis/fractal&shader.jpg}
-	  \caption{Paysage généré grâce à un bruit de perlin fractalisé}
-	 \end{figure}
-	\end{center}
+\begin{frame}{Bruit de perlin}
+  \begin{center}
+    \begin{figure}
+      \subfigure[Représentation du bruit de perlin]{\includegraphics[height=4cm]{Images/Images_Alexis/perlin_noise.png}}
+      \subfigure[Paysage généré grâce à un bruit de perlin fractalisé]{\includegraphics[height=4cm]{Images/Images_Alexis/fractal&shader.jpg}}
+      \caption{Différentes représentation du bruit de perlin}
+    \end{figure}
+  \end{center}
 \end{frame}
 
-\subsection{Voronoi}
-\begin{frame}
- \begin{center}
-  \begin{figure}
-	 \LARGE \ul{Les cellules de Voronoi}
-   \includegraphics[width=9cm]{Images/Images_Alexis/voronoi.png}
-  \end{figure}
-
- \end{center}
-
+\subsection{Les cellules de voronoi}
+\begin{frame}{Cellules de Voronoi}
+  \begin{center}
+    \begin{figure}
+      \includegraphics[width=5cm]{Images/Images_Alexis/voronoi.png}
+      \caption{Représentation des cellules de voronoi.}
+    \end{figure}
+  \end{center}
 \end{frame}
 
-
-\subsection{Les voxels : explications et exemples}
-\begin{frame}
- \begin{center}
-  \begin{figure}
-   \Large \ul{Voxels \& Boxels}
-   \includegraphics[width=6cm]{Images/Images_Alexis/voxel_teapot.jpg}
-   \includegraphics[width=6cm]{Images/Images_Alexis/example_matricielle.jpg}
-  \end{figure}
-  \begin{figure}
-   \includegraphics[width=6cm]{Images/Images_Alexis/comparaison_vecteur_matrice.png}
-  \end{figure}
- \end{center}
+\subsection{Les voxels et boxel}
+\begin{frame}{Présentation de voxels et boxel}
+  \begin{center}
+    \begin{figure}
+      \includegraphics[width=5cm]{Images/Images_Alexis/voxel_teapot.jpg}
+      \includegraphics[width=5cm]{Images/Images_Alexis/example_matricielle.jpg}
+    \end{figure}
+    \begin{figure}
+      \includegraphics[width=5cm]{Images/Images_Alexis/comparaison_vecteur_matrice.png}
+    \end{figure}
+  \end{center}
 \end{frame}
 
-\begin{frame}
- \begin{center}
-  \begin{tabular}{ll}
-   \includegraphics[width=5.5cm]{Images/Images_Alexis/voxel_engine3.jpg} &%
-   \includegraphics[width=5.5cm]{Images/Images_Alexis/voxel_engine1.jpg} \\
-   \includegraphics[width=5.5cm]{Images/Images_Alexis/voxel_engine4.jpg} &%
-   \includegraphics[width=5.5cm]{Images/Images_Alexis/voxel_engine2.jpg} \\
-  \end{tabular}
- \end{center}
+\begin{frame}{Démonstration des voxels}
+  \begin{center}
+    \begin{figure}
+      \includegraphics[height=3cm]{Images/Images_Alexis/voxel_engine3.jpg}
+      \includegraphics[height=3cm]{Images/Images_Alexis/voxel_engine1.jpg} \\
+      \includegraphics[height=3cm]{Images/Images_Alexis/voxel_engine4.jpg}
+      \includegraphics[height=3cm]{Images/Images_Alexis/voxel_engine2.jpg}
+      \caption{Exemples d'applications des voxels}
+    \end{figure}
+  \end{center}
 \end{frame}
 
-\subsection{Simulations physiques}
-\begin{frame}
- \begin{center}
-	\LARGE Simulation physique
-  \begin{figure}
-   \includegraphics[width=10cm]{Images/simulation_physique.png}
-  \end{figure}
- \end{center}
+\subsection{Les simulations physiques}
+\begin{frame}{Simulation physique par pâtes}
+  \begin{center}
+    \begin{figure}
+      \includegraphics[width=7cm]{Images/simulation_physique.png}
+      \caption{Photo de simulation physique par pâtes}
+    \end{figure}
+  \end{center}
 \end{frame}
 
-\subsection{Autres simulations cellulaires}
-\begin{frame}
- \begin{center}
-	\Large Autres simulations cellulaires:
-	\begin{figure}
-  \begin{figure}
-   \includegraphics[width=10cm]{Images/3100_cell.png}
-   \caption{Simulation après 3100 pas de simulation.}
-  \end{figure}
-  \begin{figure}
-   \includegraphics[width=10cm]{Images/7100_cell.png}
-   \caption{Simulation après 7100 pas de simulation.}
-  \end{figure}
-  \caption{Source: Publication scientifique}
-  \end{figure}
-  
- \end{center}
+\subsection{Les simulations numériques}
+\begin{frame}{Simulation numérique}
+  \begin{center}
+    \begin{figure}
+      \subfigure[Simulation après 3100 pas de simulation]{\includegraphics[width=10cm]{Images/3100_cell.png}}
+      \subfigure[Simulation après 7100 pas de simulation]{\includegraphics[width=10cm]{Images/7100_cell.png}}
+      \caption{Source: Publication scientifique}
+    \end{figure}
+  \end{center}
 \end{frame}
 
-%subduction_converence_ocean.png
 \section{La simulation cellulaire}
 
 \subsection{Les cellules}
@@ -281,7 +241,7 @@
   Cellules en collision : deux cellules en interaction n'ayant pas la même plaque.
 \end{frame}
 
-\begin{frame}{Représentation graphique de cellules}
+\begin{frame}{Représentation graphique des cellules}
   \begin{figure}
     \subfigure[Cellule inactive.]{\includegraphics[height=2.8cm]{Images/cellule_violet.png}}
     \subfigure[Cellule du front.]{\includegraphics[height=2.8cm]{Images/cellule_jaune.png}}
@@ -298,7 +258,7 @@
   \end{center}
 \end{frame}
 
-\subsection{Les interaction entre cellules}
+\subsection{Les interactions}
 \begin{frame}{Différentes interactions entre cellules}
 \begin{figure}
 \begin{center}
