Ajout de sources wikipédia.

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -519,20 +519,19 @@
 \section{Conclusion}
 
 \subsection{Remerciements et sources}
-\begin{frame}
-  Sources :
+\begin{frame}{Sources}
   \begin{footnotesize}
   \begin{itemize}
    \item Richard Bézin, Benoît Crespin, Xavier Skapin, Olivier Terraz, Philippe Meseure. Opérations
 topologiques pour la géomorphologie.
     \begin{tiny} 
-     Journées de l’Association Française d’Informatique Graphique, Oct 2011, Biarritz, France. pp.95-104, 2011. <hal-00633705>
+     Journées de l’Association Française d’Informatique Graphique, Oct 2011, Biarritz, France. pp.95-104, 2011. $<hal-00633705>$
     \end{tiny}
    \item Pascale Roudier. Synthèse de paysages réalistes par simulation de processus d’érosion. 
     \begin{tiny}
     Graphics
 [cs.GR]. École Nationale Supérieure des Mines de Saint-Etienne; Université Jean Monnet -
-Saint-Etienne, 1993. French. <NNT : 1993STET4011>. <tel-00835373>
+Saint-Etienne, 1993. French. $<NNT : 1993STET4011>. <tel-00835373>$
 	\end{tiny}
    \item Thomas Leduc. Modélisation par un système dynamique discret du processus de subduction-érosion en tectonique des plaques : première approche uni-dimensionnelle. 
     \begin{tiny}
@@ -542,15 +541,34 @@ Saint-Etienne, 1993. French. <NNT : 1993STET4011>. <tel-00835373>
 du phénomène de subduction- érosion en tectonique des plaques. 
      \begin{tiny}
      Modeling and Simulation.
-Université Pierre et Marie Curie - Paris VI, 1999. French. <tel-00327733>
+Université Pierre et Marie Curie - Paris VI, 1999. French. $<tel-00327733>$
 	 \end{tiny}
    \item Thomas Leduc. Simulation par automates cellulaires bi-dimensionnels en géotectonique. 
      \begin{tiny}
      Laboratoires LIP6, 1999.
      \end{tiny}
-   \item Wikipédia (lois et algorithmes) et Google Images (Illustrations)
+%    \item Wikipédia (lois et algorithmes) et Google Images (Illustrations)
   \end{itemize}
 % Il est obligé de citer ainsi les thèses d'un point de vue légal. Ceci dit, la taille des informations inutiles sera réduite au minimum pour plus de clarté.
+  \end{footnotesize}
+\end{frame}
+
+\begin{frame}{Sources Wikipédia}
+  \begin{footnotesize}
+    \begin{itemize}
+      \item Loi de Hooke~:
+	\begin{tiny}
+	  \url{https://fr.wikipedia.org/wiki/Loi_de_Hooke}
+	\end{tiny}
+      \item Module de Young~:
+	\begin{tiny}
+	  \url{https://fr.wikipedia.org/wiki/Module_de_Young}
+	\end{tiny}
+      \item Loi de Coulomb~:
+	\begin{tiny}
+	  \url{https://fr.wikipedia.org/wiki/Loi_de_Coulomb_(mecanique)}
+	\end{tiny}
+    \end{itemize}
   \end{footnotesize}
 \end{frame}
 
