Sommaire remis, et corrections mineures

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -27,7 +27,7 @@
 \setlength{\tabcolsep}{0pt}
 
 \title{Comment simuler numériquement la géomorphologie alpine ?}
-\subtitle{Sujet de TPE}
+\subtitle{Présentation du TPE}
 \author{Gros Alexis, Manceau Thibaut, Porteries Tristan}
 %\logo{\includegraphics[height=0.5cm]{blender.png}}
 
@@ -35,6 +35,16 @@
 \CenterWallPaper{1}{Images/inde.jpg}
 % Titre
 \frame{\titlepage}
+
+\begin{frame}
+    \frametitle{Sommaire}
+    \begin{multicols}{2}
+      {\small
+				\setcounter{tocdepth}{1}
+        \tableofcontents
+      }
+    \end{multicols}
+\end{frame}
 
 \section{Les principes géomorphologiques}
 
@@ -59,6 +69,8 @@
   \begin{center}
     \begin{figure}
       \subfigure[Carte des principales plaques tectoniques]{\includegraphics[width=4cm]{Images/Images_Alexis/plaques.png}}
+    \end{figure}
+    \begin{figure}
       \subfigure[Les Andes]{\includegraphics[width=4cm]{Images/Images_Alexis/andes.jpg}}
       \subfigure[Le Japon]{\includegraphics[height=3cm]{Images/Images_Alexis/japon.jpg}}
     \end{figure}
