cerlce -> sphère dans la présentation des cellules.

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -236,7 +236,7 @@
   \begin{tabular}{m{8cm}m{1cm}m{2cm}}
     \mbox{Cellule : plus petit élément incompressible. Taille}
     \mbox{réelle : sphère de 10 m de Ø Taille dans la}
-    \mbox{simulation : cercle de Ø 1} &&
+    \mbox{simulation : sphère de Ø 1} &&
     \includegraphics[width=1.5cm]{Images/cellule.png}
   \end{tabular}
   Propriétés mutables :
