Ajout d'un légende sur la diapo "disposition des cellules".

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -263,10 +263,12 @@
 \end{frame}
 
 \begin{frame}{Disposition des cellules}
-  Disposition en nid-d'abeille au lancement de la simulation, équidistance de 1 entre cellules.
-  Distance « parfaite » de 1 entre les cellules.
+  Disposition en nid-d'abeille sur un plan au lancement de la simulation. Equidistance « parfaite » de 1 entre les cellules.
   \begin{center}
-    \includegraphics[width=5cm]{Images/hexagone.png}
+    \begin{figure}
+      \includegraphics[width=5cm]{Images/hexagone.png}
+      \caption{Image de la simulation juste après la création et la disposition des cellules}
+    \end{figure}
   \end{center}
 \end{frame}
 
