Légende cryoclastie et hydrolyse

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -83,7 +83,7 @@
   \begin{center}
     \begin{figure}
       \includegraphics[width=6cm]{Images/Diapos/Alteration/Physique/cryoclastie.jpg}
-      \caption{Exemple du phénomène de cryoclastie}
+      \caption{Exemple d'une altération cryoclastique}
     \end{figure}
   \end{center}
 \end{frame}
@@ -93,6 +93,7 @@
   \begin{center}
     \begin{figure}
       \includegraphics[width=5cm]{Images/Diapos/Alteration/Chimiques/hydrolyse.jpeg}
+      \caption{Altération chimique d'une roche}
     \end{figure}
   \end{center}
 \end{frame}
