CIR: Six échantillons de compressions --> Six échantillons de simulation

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -381,7 +381,7 @@
       \hline
     \end{tabular}
     \end{center}
-    \caption{Six échantillons de compression avec le centre instantané de rotation.}
+    \caption{Six échantillons de simulation avec le centre instantané de rotation.}
   \end{figure}
 \end{frame}
 
