Orthographe et titre à mes diapos

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -39,8 +39,8 @@
 \begin{frame}
     \frametitle{Sommaire}
     \begin{multicols}{2}
-      {\small
-				\setcounter{tocdepth}{1}
+      {
+		\setcounter{tocdepth}{1}
         \tableofcontents
       }
     \end{multicols}
@@ -79,7 +79,7 @@
 
 \section{Les altérations}
 \subsection{Les altérations physiques}
-\begin{frame}
+\begin{frame}{Les Altérations physiques}
   \begin{center}
     \begin{figure}
       \includegraphics[width=6cm]{Images/Diapos/Alteration/Physique/cryoclastie.jpg}
@@ -89,7 +89,7 @@
 \end{frame}
 
 \subsection{Les altérations chimiques}
-\begin{frame}
+\begin{frame}{Les Altérations chimiques}
   \begin{center}
     \begin{figure}
       \includegraphics[width=5cm]{Images/Diapos/Alteration/Chimiques/hydrolyse.jpeg}
@@ -101,7 +101,7 @@
 \section{L'érosion}
 
 \subsection{Ruissellement et érosion fluviale}
-\begin{frame}
+\begin{frame}{L'érosion fluviale}
  \begin{center}
   \begin{figure}
     \subfigure[Les « Badlands »]{\includegraphics[height=3cm]{Images/Diapos/Erosion/Fluviale/bad_lands.jpg}}
@@ -111,7 +111,7 @@
 \end{frame}
 
 \subsection{L'érosion karstique}
-\begin{frame}
+\begin{frame}{L'érosion karstique}
   \begin{center}
     \begin{figure}[h]
       \includegraphics[width=5.35cm]{Images/Diapos/Erosion/Karstique/dolines.jpg}
@@ -122,7 +122,7 @@
 \end{frame}
 
 \subsection{L'érosion glaciaire}
-\begin{frame}
+\begin{frame}{L'érosion glaciaire}
   \begin{center}
     \begin{figure}
       \includegraphics[width=7cm]{Images/Diapos/Erosion/Glaciaire/Erosion_glaciaire_Bourque4B.png}
@@ -139,7 +139,7 @@
     \item \textit{-200 Ma, trias} : ouverture de l’océan alpin~;
     \item \textit{-140 Ma, crétacé inférieur} : début de la compression de l’océan alpin~;
     \item \textit{-65 Ma, paléocène} : émersion de la plate-forme continentale, le mont blanc passe sous la zone d'obduction pour ressurgir ensuite ;
-    \item \textit{-23 Ma, néogène}: création du jura ;
+    \item \textit{-23 Ma, néogène}: création du Jura ;
     \item \textit{Pliocène} : séparation de la couche calcaire du reste des plis.
   \end{itemize}
   \begin{center}
@@ -155,7 +155,7 @@
     \begin{figure}
       \includegraphics[height=2cm]{Images/Images_Alexis/glacier_reculon.png}
       \includegraphics[height=2cm]{Images/Images_Alexis/glaciers_img3.png}
-      \caption{Les ères glaciaires successives ont grandement participé au façonnage de nos paysages.}
+      \caption{Les ères glaciaires successives ont grandement participées au façonnage de nos paysages.}
       \includegraphics[width=4cm]{Images/Images_Alexis/gresivaudan.jpg}
     \end{figure}
   \end{center}
@@ -169,7 +169,7 @@
     \begin{figure}
       \subfigure[Représentation du bruit de Perlin]{\includegraphics[height=4cm]{Images/Images_Alexis/perlin_noise.png}}
       \subfigure[Paysage généré grâce à un bruit de Perlin fractalisé]{\includegraphics[height=4cm]{Images/Images_Alexis/fractal&shader.jpg}}
-      \caption{Différentes représentation du bruit de Perlin}
+      \caption{Différentes représentations du bruit de Perlin}
     \end{figure}
   \end{center}
 \end{frame}
@@ -204,7 +204,7 @@
       \includegraphics[height=3cm]{Images/Images_Alexis/voxel_engine1.jpg} \\
       \includegraphics[height=3cm]{Images/Images_Alexis/voxel_engine4.jpg}
       \includegraphics[height=3cm]{Images/Images_Alexis/voxel_engine2.jpg}
-      \caption{Exemples d'applications des voxels}
+      \caption{Exemples d'application des voxels}
     \end{figure}
   \end{center}
 \end{frame}
