--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -464,34 +464,34 @@
   \end{figure}
 \end{frame}
 
-\subsection{La friction}
-\begin{frame}{Loi de Coulomb}
-  \begin{center}
-    $T_0 = f_0 \times N$
-  \end{center}
-  Si $T > T_0$ : glissement. Sinon friction. \smallbreak
-  Où $T = $ : force tangentielle, $N = $ : contrainte à la normale, $f_0 = $ : coefficient d'adhérence.
-  \begin{figure}
-    \begin{center}
-      \begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=0.8cm,y=1.0cm]
-	\clip(-4,-1) rectangle (4,2);
-	\draw [shift={(0,0)},color=qqwuqq,fill=qqwuqq,fill opacity=0.1] (0,0) -- (53.13:0.63) arc (53.13:126.87:0.63) -- cycle;
-	\draw (-1.5,2)-- (0,0);
-	\draw (0,0)-- (1.5,2);
-	\draw (1.5,2)-- (-1.5,2);
-	\draw [domain=-4:4] plot(\x,{(-0-0*\x)/4});
-	\draw (0,0)-- (0,1.41);
-	\draw (-1.06,1.41)-- (1.06,1.41);
-	\begin{scriptsize}
-	  \draw[color=qqwuqq] (0.1,0.4) node {$f_0$};
-	  \draw[color=black] (0.21,0.79) node {$N$};
-	  \draw[color=black] (0.1,1.55) node {$T$};
-	\end{scriptsize}
-      \end{tikzpicture}
-    \end{center}
-    \caption{Le cône représente la force maximale possible avant un glissement.}
-  \end{figure}
-\end{frame}
+% \subsection{La friction}
+% \begin{frame}{Loi de Coulomb}
+%   \begin{center}
+%     $T_0 = f_0 \times N$
+%   \end{center}
+%   Si $T > T_0$ : glissement. Sinon friction. \smallbreak
+%   Où $T = $ : force tangentielle, $N = $ : contrainte à la normale, $f_0 = $ : coefficient d'adhérence.
+%   \begin{figure}
+%     \begin{center}
+%       \begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=0.8cm,y=1.0cm]
+% 	\clip(-4,-1) rectangle (4,2);
+% 	\draw [shift={(0,0)},color=qqwuqq,fill=qqwuqq,fill opacity=0.1] (0,0) -- (53.13:0.63) arc (53.13:126.87:0.63) -- cycle;
+% 	\draw (-1.5,2)-- (0,0);
+% 	\draw (0,0)-- (1.5,2);
+% 	\draw (1.5,2)-- (-1.5,2);
+% 	\draw [domain=-4:4] plot(\x,{(-0-0*\x)/4});
+% 	\draw (0,0)-- (0,1.41);
+% 	\draw (-1.06,1.41)-- (1.06,1.41);
+% 	\begin{scriptsize}
+% 	  \draw[color=qqwuqq] (0.1,0.4) node {$f_0$};
+% 	  \draw[color=black] (0.21,0.79) node {$N$};
+% 	  \draw[color=black] (0.1,1.55) node {$T$};
+% 	\end{scriptsize}
+%       \end{tikzpicture}
+%     \end{center}
+%     \caption{Le cône représente la force maximale possible avant un glissement.}
+%   \end{figure}
+% \end{frame}
 
 \subsection{Les limites matérielles}
 \begin{frame}{Limites de temps de calculs}
