--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -77,9 +77,12 @@
   \end{center}
 \end{frame}
 
-\section{Les altérations}
-\subsection{Les altérations physiques}
-\begin{frame}{Les Altérations physiques}
+\section{Les processus sédimentaires}
+
+\subsection{L'altération}
+
+\subsubsection{Les altérations physiques}
+\begin{frame}{Les altérations physiques}
   \begin{center}
     \begin{figure}
       \includegraphics[width=6cm]{Images/Diapos/Alteration/Physique/cryoclastie.jpg}
@@ -88,8 +91,8 @@
   \end{center}
 \end{frame}
 
-\subsection{Les altérations chimiques}
-\begin{frame}{Les Altérations chimiques}
+\subsubsection{Les altérations chimiques}
+\begin{frame}{Les altérations chimiques}
   \begin{center}
     \begin{figure}
       \includegraphics[width=5cm]{Images/Diapos/Alteration/Chimiques/hydrolyse.jpeg}
@@ -98,9 +101,9 @@
   \end{center}
 \end{frame}
 
-\section{L'érosion}
+\subsection{L'érosion}
 
-\subsection{Ruissellement et érosion fluviale}
+\subsubsection{Ruissellement et érosion fluviale}
 \begin{frame}{L'érosion fluviale}
  \begin{center}
   \begin{figure}
@@ -110,7 +113,7 @@
  \end{center}
 \end{frame}
 
-\subsection{L'érosion karstique}
+\subsubsection{L'érosion karstique}
 \begin{frame}{L'érosion karstique}
   \begin{center}
     \begin{figure}[h]
@@ -121,7 +124,7 @@
   \end{center}
 \end{frame}
 
-\subsection{L'érosion glaciaire}
+\subsubsection{L'érosion glaciaire}
 \begin{frame}{L'érosion glaciaire}
   \begin{center}
     \begin{figure}
@@ -131,7 +134,7 @@
   \end{center}
 \end{frame}
 
-\section{Problématiques géologiques des Alpes}
+\section{Les problématiques géologiques des Alpes}
 
 \subsection{L'historique des Alpes}
 \begin{frame}{Chronologie des Alpes}
@@ -150,12 +153,12 @@
 \end{frame}
 
 \subsection{Les glaciers}
-\begin{frame}{L'effet des glaciers sur le paysage Alpin}
+\begin{frame}{L'effet des glaciers sur le paysage alpin}
   \begin{center}
     \begin{figure}
       \includegraphics[height=2cm]{Images/Images_Alexis/glacier_reculon.png}
       \includegraphics[height=2cm]{Images/Images_Alexis/glaciers_img3.png}
-      \caption{Les ères glaciaires successives ont grandement participées au façonnage de nos paysages.}
+      \caption{Les ères glaciaires successives ont grandement participé au façonnage de nos paysages.}
       \includegraphics[width=4cm]{Images/Images_Alexis/gresivaudan.jpg}
     \end{figure}
   \end{center}
@@ -275,7 +278,7 @@
 \end{frame}
 
 \subsection{Les interactions}
-\begin{frame}{Différentes interactions entre cellules}
+\begin{frame}{Les différentes interactions entre cellules}
 \begin{figure}
 \begin{center}
 \begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1.0cm,y=1.0cm,scale=0.45,every node/.style={scale=0.8}]
@@ -398,7 +401,7 @@
 \end{frame}
 
 \begin{frame}{Approximation de la compression et traction}
-  Approximation symétrique dans les cas de compressions et tractions. \\
+  Approximation symétrique dans les cas de compression et traction. \\
   Où $d'$ = $1 -$ la distance entre les deux cellules. \\
   \begin{center}
     Si traction : \medbreak
@@ -436,7 +439,7 @@
 \begin{frame}{Front de cellules}
   Propagation par front, l’ancien front crée le nouveau.
   Le premier front ne contient que la cellule en collision.
-  Interaction avec les cellules du front actuelle et du front suivant.
+  Interactions avec les cellules du front actuel et du front suivant.
   \begin{figure}
     \begin{tabular}{|M|M|M|}
       \arrayrulecolor{sky}
@@ -454,7 +457,7 @@
   \end{figure}
 \end{frame}
 
-\begin{frame}{Calques de vélocités}
+\begin{frame}{Calques de vélocité}
   Un calque par cellule en collision. Fusion des calques avant déplacement des cellules.
   \begin{figure}
     \begin{center}
@@ -518,7 +521,7 @@
   $10000$ cellules en collisions : 1890000 j = 5178 a.
 \end{frame}
 
-\section{Les Améliorations possibles}
+\section{Les améliorations possibles}
 \begin{frame}{Améliorations possibles de la simulation}
   Améliorations au profit du réalisme :
   \begin{itemize}
@@ -537,7 +540,7 @@
 
 \subsection{Remerciements et sources}
 \begin{frame}{Sources}
-  \begin{footnotesize}
+  \begin{scriptsize}
   \begin{itemize}
    \item Richard Bézin, Benoît Crespin, Xavier Skapin, Olivier Terraz, Philippe Meseure. Opérations
 topologiques pour la géomorphologie.
@@ -565,14 +568,6 @@ Université Pierre et Marie Curie - Paris VI, 1999. French. $<tel-00327733>$
      Laboratoires LIP6, 1999.
      \end{tiny}
 %    \item Wikipédia (lois et algorithmes) et Google Images (Illustrations)
-  \end{itemize}
-% Il est obligé de citer ainsi les thèses d'un point de vue légal. Ceci dit, la taille des informations inutiles sera réduite au minimum pour plus de clarté.
-  \end{footnotesize}
-\end{frame}
-
-\begin{frame}{Sources Wikipédia}
-  \begin{footnotesize}
-    \begin{itemize}
       \item Loi de Hooke~:
 	\begin{tiny}
 	  \url{https://fr.wikipedia.org/wiki/Loi_de_Hooke}
@@ -585,8 +580,9 @@ Université Pierre et Marie Curie - Paris VI, 1999. French. $<tel-00327733>$
 	\begin{tiny}
 	  \url{https://fr.wikipedia.org/wiki/Loi_de_Coulomb_(mecanique)}
 	\end{tiny}
-    \end{itemize}
-  \end{footnotesize}
+  \end{itemize}
+% Il est obligé de citer ainsi les thèses d'un point de vue légal. Ceci dit, la taille des informations inutiles sera réduite au minimum pour plus de clarté.
+  \end{scriptsize}
 \end{frame}
 
 \end{document}
