Diapo simulation automates cellulaires discrets

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -226,8 +226,8 @@
 \begin{frame}{Simulation numérique}
   \begin{center}
     \begin{figure}
-      \subfigure[Simulation après 3100 pas de simulation]{\includegraphics[width=10cm]{Images/3100_cell.png}}
-      \subfigure[Simulation après 7100 pas de simulation]{\includegraphics[width=10cm]{Images/7100_cell.png}}
+      \subfigure[Simulation après 3100 pas]{\includegraphics[width=10cm]{Images/3100_cell.png}}
+      \subfigure[Simulation après 7100 pas]{\includegraphics[width=10cm]{Images/7100_cell.png}}
       \caption{Images de simulation par automates cellulaires discrets}
     \end{figure}
   \end{center}
